[package]
name = "treemon"
version = "0.1.0"
edition = "2021"

[lib]
name = "treemon"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.90", features = ["backtrace"] }
cbindgen = "0.27.0"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
gethostname = "0.5.0"
histogram = { version = "0.11.0", features = ["serde"] }
rayon = "1.10.0"
rouille = "3.6.2"
serde = { version = "1.0.210", features = ["derive"] }
serde-binary = "0.5.0"
